--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@tailwindcss/postcss": "^4.0.6",
         "@tailwindcss/vite": "^4.0.6",
+        "chart.js": "^4.4.7",
         "tailwindcss": "^4.0.6"
     }
 }
