Added API reference
Added Fuel Price API reference

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FUEL_STATIONS_URL="API URL for fuel station names"
+FUEL_PRICE_URL="API URL for fuel station price and fuel type"
+API_AUTHORIZATION="API token"
+API_REFERENCE="API reference text"
